System generation from config files

--- a/KrysiaBartek2024/source/krysia_bartek_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_bartek_strefa.tex
@@ -28,22 +28,40 @@
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1mOpening}
 \def\hyperlinkedtitle{\hyperref[sec:1ntOpening]{2\, 1\ntx\ opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntOpening}
-\def\hyperlinkedtitle{\hyperref[sec:1ntInterference]{3\, 1\ntx\ -- dealing with interference}}
+\def\hyperlinkedtitle{\hyperref[sec:overcalling1nt]{3\, Overcalling 1\ntx}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:overcalling1nt}
+\def\hyperlinkedtitle{\hyperref[sec:1ntInterference]{4\, 1\ntx\ -- dealing with interference}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:1ntInterference}
-\def\hyperlinkedtitle{\hyperref[sec:2ntOpening]{4\, 2\ntx\ opening}}
+\def\hyperlinkedtitle{\hyperref[sec:2ntOpening]{5\, 2\ntx\ opening}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:2ntOpening}
-\def\hyperlinkedtitle{\hyperref[sec:drury]{5\, Drury}}
+\def\hyperlinkedtitle{\hyperref[sec:drury]{6\, Drury}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:drury}
-\def\hyperlinkedtitle{\hyperref[sec:acol2c]{6\, Acol 2{\color{OliveGreen}\clubsuit}}}
+\def\hyperlinkedtitle{\hyperref[sec:reverses]{7\, Reverses, jump shifts and jump reverses}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:reverses}
+\def\hyperlinkedtitle{\hyperref[sec:preemptOpening]{8\, Preempt opening}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:preemptOpening}
+\def\hyperlinkedtitle{\hyperref[sec:acol2c]{9\, Acol 2{\color{OliveGreen}\clubsuit}}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:acol2c}
-\def\hyperlinkedtitle{\hyperref[sec:dealingWithPreempts]{7\, Dealing with preempts}}
+\def\hyperlinkedtitle{\hyperref[sec:dealingWithPreempts]{10\, Dealing with preempts}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:dealingWithPreempts}
-\def\hyperlinkedtitle{\hyperref[sec:askLSF]{8\, Ask LSF}}
+\def\hyperlinkedtitle{\hyperref[sec:rebid3card]{11\, Rebid with 3-card support}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:rebid3card}
+\def\hyperlinkedtitle{\hyperref[sec:askLSF]{12\, Ask LSF}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:askLSF}
-\def\hyperlinkedtitle{\hyperref[sec:gazilli]{9\, Gazilli}}
+\def\hyperlinkedtitle{\hyperref[sec:gazilli]{13\, Gazilli}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:gazilli}
-\def\hyperlinkedtitle{\hyperref[sec:dealingWithMulti]{10\, Dealing with Multi/Wilkosz}}
+\def\hyperlinkedtitle{\hyperref[sec:miniSplinter]{14\, Mini Splinters}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:miniSplinter}
+\def\hyperlinkedtitle{\hyperref[sec:Transfers1MX]{15\, Transfers after 1\majs\ (\dbl)}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:Transfers1MX}
+\def\hyperlinkedtitle{\hyperref[sec:preempt2nt]{16\, 2\ntx\ overcall after major preempt}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:preempt2nt}
+\def\hyperlinkedtitle{\hyperref[sec:overcalling2nt]{17\, Overcalling 2\ntx}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:overcalling2nt}
+\def\hyperlinkedtitle{\hyperref[sec:dealingWithMulti]{18\, Dealing with Multi/Wilkosz}}
 \item[\hyperlinkedtitle] \hfill \pageref{sec:dealingWithMulti}
+\def\hyperlinkedtitle{\hyperref[sec:otherBidsAndRules]{19\, Other}}
+\item[\hyperlinkedtitle] \hfill \pageref{sec:otherBidsAndRules}
 \end{description}
 \newpage
 \section{\texorpdfstring{1\mins\ opening}{1mOpening}}\label{sec:1mOpening}
@@ -207,6 +225,39 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \begin{itemize}
     \item \pass, 3\spades\ = to play
     \item 3\nt, 4\hearts, 4\spades\ = to play
+\end{itemize}
+
+\section{\texorpdfstring{Overcalling 1\ntx}{overcalling1nt}}\label{sec:overcalling1nt}
+
+\subsubsection*{(1\ntx) -- ?}
+\begin{itemize}
+    \item \dbl\ = 5\minor\ + 4\major
+    \item 2\clubs\ = 54 \major
+    \item 2\diams\ = 6+ \major
+    \item 2\hearts\ = 5\hearts\ + 4\minor
+    \item 2\spades\ = 5\spades\ + 4\minor
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- \dbl\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\clubs\ = \pass/correct
+    \item 2\diams\ = own suit
+    \item 2\hearts\ = \pass/correct
+    \item 2\spades\ = own suit
+    \item 2\nt\ = show minor
+    \item 3\diams\ = show major
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- 2\clubs\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\diams\ = show better major
+    \item 2\hearts, 2\spades\ = preference
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\hearts\ = \pass/correct
+    \item 2\spades\ = inv with \hearts
 \end{itemize}
 
 \section{\texorpdfstring{1\ntx\ -- dealing with interference}{1ntInterference}}\label{sec:1ntInterference}
@@ -423,6 +474,47 @@ SYSTEM ON
     \item any other bid = NAT, \inv
 \end{itemize}
 
+\section{\texorpdfstring{Reverses, jump shifts and jump reverses}{reverses}}\label{sec:reverses}
+
+\subsubsection*{1\anysuit{x}\ -- 1\anysuit{y}\ -- ?}
+\begin{itemize}
+    \item 2\anysuit{z}, \anysuit{y}\ < \anysuit{z}\ = reverse
+    \item 3\anysuit{y}, \anysuit{y}\ > \anysuit{z}\ = jump shift
+    \item 3\anysuit{z}, \anysuit{y}\ < \anysuit{z}\ = jump reverse
+\end{itemize}
+
+\subsubsection*{1\mins\ -- 1\hearts\ -- ?}
+\begin{itemize}
+    \item 1\spades\ = 4\spades, 12-17
+    \item 2\spades\ = 4\spades, (18)19+
+\end{itemize}
+
+\section{\texorpdfstring{Preempt opening}{preemptOpening}}\label{sec:preemptOpening}
+
+\subsubsection*{2\diams -- ?}
+\begin{itemize}
+    \item 2\nt = OGUST (after 2\diams only!)
+\end{itemize}
+
+\subsubsection*{2\diams -- 2\diams \\ ?}
+\begin{itemize}
+    \item 3\clubs = 5-7, bad \diams quality
+    \item 3\diams = 5-7, good \diams quality
+    \item 3\hearts = 8-10, bad \diams quality
+    \item 3\spades = 8-10, good \diams quality
+\end{itemize}
+
+\subsubsection*{2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = \lsf
+    \item 2\nt = 5+\spades
+\end{itemize}
+
+\subsubsection*{2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = \lsf
+\end{itemize}
+
 \section{\texorpdfstring{Acol 2{\color{OliveGreen}\clubsuit}}{acol2c}}\label{sec:acol2c}
 
 2\clubs\ opening = 23+ HCP or 9.5 winning tricks
@@ -565,6 +657,24 @@ System as after 2\nt\ opening
     \item 5\hearts = Slam Try
 \end{itemize}
 
+\section{\texorpdfstring{Rebid with 3-card support}{rebid3card}}\label{sec:rebid3card}
+
+\subsubsection*{1\clubs -- 1\hearts \\ 2\hearts -- ?}
+\begin{itemize}
+    \item 2\spades = 5+\hearts, \inv+, \lsf
+    \item 2\nt = 4\hearts, \inv
+    \item 3\clubs = 4\hearts + 4\clubs, \inv
+    \item 3\diams = 4\hearts, \gf
+\end{itemize}
+
+\subsubsection*{1\clubs -- 1\spades \\ 2\spades -- ?}
+\begin{itemize}
+    \item 2\nt = 4\spades, \inv
+    \item 3\clubs = 4\spades + 4\clubs, \inv
+    \item 3\diams = 5\spades, \inv+, \lsf
+    \item 3\hearts = 4\spades, \gf
+\end{itemize}
+
 \section{\texorpdfstring{Ask LSF}{askLSF}}\label{sec:askLSF}
 
 \subsubsection*{All basic ASK LSF sequences:}
@@ -674,6 +784,232 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
     \item 3\diams\ = 5\spades4\diams\ 16+
     \item 3\hearts\ = 5\spades4\hearts\ 16+
     \item 3\spades\ = 6\spades\ 16+
+\end{itemize}
+
+\section{\texorpdfstring{Mini Splinters}{miniSplinter}}\label{sec:miniSplinter}
+
+any shortness 9-11, 4-card support, not \gf!
+
+\subsubsection*{1\hearts\ -- ?}
+\begin{itemize}
+    \item 2\spades\ = mini splinter
+    \item 2\nt\ = inv + fit
+\end{itemize}
+
+\subsubsection*{1\spades\ -- ?}
+\begin{itemize}
+    \item 2\nt\ = mini splinter
+    \item 3\hearts\ = inv + fit
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = \lsf
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 2\nt \\ ?}
+\begin{itemize}
+    \item 3\clubs\ = \lsf
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 2\spades \\ 2\nt\ -- ?}
+\begin{itemize}
+    \item 3\clubs\ = \clubs\ shortness
+    \item 3\diams\ = \diams\ shortness
+    \item 3\hearts\ = \spades\ shortness
+    \item 3\spades\ = \spades\ shortness \gf\ (max)
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 2\nt \\ 3\clubs\ -- ?}
+\begin{itemize}
+    \item 3\diams\ = \clubs\ shortness
+    \item 3\hearts\ = \diams\ shortness
+    \item 3\spades\ = \hearts\ shortness
+    \item 3\nt\ = \hearts\ shortness \gf\ (max)
+\end{itemize}
+
+\section{\texorpdfstring{Transfers after 1\majs\ (\dbl)}{Transfers1MX}}\label{sec:Transfers1MX}
+
+\subsubsection*{1\hearts -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\spades = NAT, 4+\spades, \fonce
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts, constructive 8-10
+    \item 2\hearts = 4-7, 3\hearts
+    \item 3\diams = 4+\hearts, 6-9
+    \item 3\hearts = 0-6 \hcp
+\end{itemize}
+
+\subsubsection*{1\spades -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\nt = $\rightarrow$ 2\clubs
+    \item 2\clubs = $\rightarrow$ 2\diams
+    \item 2\diams = $\rightarrow$ 2\hearts
+    \item 2\hearts = $\rightarrow$ 2\spades, constructive 8-10
+    \item 2\spades = 4-7, 3\spades
+    \item 3\hearts = 4+\spades, 6-9
+    \item 3\spades = 0-6 \hcp
+\end{itemize}
+
+\section{\texorpdfstring{2\ntx\ overcall after major preempt}{preempt2nt}}\label{sec:preempt2nt}
+
+\subsubsection*{(2\majs) -- ?}
+\begin{itemize}
+    \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- ?}
+\begin{itemize}
+    \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
+    \item 3\diams\ = 4\spades \gf
+    \item 3\hearts\ = forces 3\spades, 5+\spades, weak or \gf
+    \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
+    \item 3\nt\ = to play
+    \item 4\clubs\ = 6\clubs5\spades, may have shortness
+    \item 4\diams\ = 6\diams5\spades, may have shortness
+    \item 4\hearts\ = 6+\spades
+    \item 4\spades\ = minors
+    \item 4\nt\ = quantitative
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak with \diams
+    \item 3\hearts = 3-\spades
+    \item 3\spades = 4\spades
+    \item 3\nt = 5\spades
+    \item 4\clubs = 6+\spades
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\spades = no \hearts stopper
+    \item 3\nt = good \hearts stopper
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 3\nt = 3\spades
+    \item 4\clubs, 4\diams = own suit
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\diams \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\hearts = minors
+    \item 3\spades = 4\spades
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak, 5+\spades
+    \item 3\nt = \pass/correct
+    \item 4\clubs/4\diams = NAT
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\spades \\
+                (P) -- 3\nt -- (P) -- ?}
+\begin{itemize}
+    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\hearts = 1\spades, both minors
+    \item 4\spades = void \spades, both minors
+\end{itemize}
+
+\subsubsection*{(2\hearts) -- 2\nt -- (P) -- 4\hearts \\
+                (P) -- 4\spades -- (P) -- ?}
+\begin{itemize}
+    \item 4\nt = RKCB 1430
+    \item 5\anysuit{x} = EX 0314
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- ?}
+\begin{itemize}
+    \item 3\clubs\ = forces 3\diams, 1-\spades \gf OR weak with \diams
+    \item 3\diams\ = forces 3\hearts, 5+\hearts, weak or \gf
+    \item 3\hearts\ = long minor/minors, no \spades shortness, 3\spades = ASK
+    \item 3\spades\ = 4\hearts, \gf
+    \item 3\nt\ = to play
+    \item 4\clubs\ = 6\clubs5\hearts, may have shortness
+    \item 4\diams\ = 6\diams5\hearts, may have shortness
+    \item 4\hearts\ = 6+\hearts
+    \item 4\spades\ = minors
+    \item 4\nt\ = quantitative
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak with \diams
+    \item 3\hearts = 3-\hearts
+    \item 3\spades = 4\hearts
+    \item 3\nt = 5\hearts
+    \item 4\clubs = 6+\hearts
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- ?}
+\begin{itemize}
+    \item 3\spades = no \spades stopper
+    \item 3\nt = good \spades stopper
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\clubs \\
+                (P) -- 3\diams -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 3\nt = 3\hearts
+    \item 4\clubs, 4\diams = own suit
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\diams \\
+                (P) -- 3\hearts -- (P) -- ?}
+\begin{itemize}
+    \item \pass = weak, 5+\hearts
+    \item 3\nt = \pass/correct
+    \item 4\clubs/4\diams = NAT
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\hearts \\
+                (P) -- 3\spades -- (P) -- ?}
+\begin{itemize}
+    \item 4\clubs/4\diams = NAT, fixed
+    \item 4\hearts = 1\spades both minors
+    \item 4\spades = void \spades both minors
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\spades \\
+                (P) -- ?}
+\begin{itemize}
+    \item 4\clubs = 4\hearts
+    \item 3\nt = to play
+\end{itemize}
+
+\subsubsection*{(2\spades) -- 2\nt -- (P) -- 4\diams \\
+                (P) -- 4\hearts -- (P) -- ?}
+\begin{itemize}
+    \item 4\spades = RKCB 1403
+    \item 4\nt = EX \spades \textbf{0314}
+    \item 5\clubs/5\diams = EX \textbf{0314}
+\end{itemize}
+
+\section{\texorpdfstring{Overcalling 2\ntx}{overcalling2nt}}\label{sec:overcalling2nt}
+
+\subsubsection*{(2\nt) -- ?}
+\begin{itemize}
+    \item \dbl = \twosuit{\clubs}{\spades} OR \twosuit{\diams}{\hearts}
+    \item 3\clubs = \twosuit{\clubs}{\diams} OR \twosuit{\hearts}{\spades}
+    \item 3\diams = \twosuit{\clubs}{\hearts} OR \twosuit{\diams}{\spades}
 \end{itemize}
 
 \section{\texorpdfstring{Dealing with Multi/Wilkosz}{dealingWithMulti}}\label{sec:dealingWithMulti}
@@ -804,5 +1140,33 @@ System like after 2\diams preempt.
 % \begin{itemize}
 %     \item 2\nt = any hand with \hearts
 % \end{itemize}
+
+\section{\texorpdfstring{Other}{otherBidsAndRules}}\label{sec:otherBidsAndRules}
+
+\subsubsection*{1\clubs\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \clubs\spades, choose
+    \item 2\nt\ = \clubs\diams, choose
+    \item 3\clubs\ = to play
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- (1\spades) -- P -- (2\spades) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \clubs\hearts, choose
+    \item 2\nt\ = \clubs\diams, choose
+    \item 3\clubs\ = to play
+\end{itemize}
+
+\subsubsection*{1\diams\ -- (1\spades) -- P -- (2\spades) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \diams\hearts, choose
+    \item 3\clubs\ = \clubs\diams, choose
+\end{itemize}
+
+\subsubsection*{1\diams\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \diams\spades, choose
+    \item 3\clubs\ = \clubs\diams, choose
+\end{itemize}
 
 \end{document}
